argo-rollouts/blue-green/services.yml
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service-active
  namespace: mern-devops
  labels:
    app: backend
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: backend-service-preview
  namespace: mern-devops
  labels:
    app: backend
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service-active
  namespace: mern-devops
  labels:
    app: frontend
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service-preview
  namespace: mern-devops
  labels:
    app: frontend
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
